--- a/comp34612_project.ipynb
+++ b/comp34612_project.ipynb
@@ -1855,7 +1855,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# This is an exmaple change to check the Github diff"
+      ],
       "metadata": {
         "id": "t_omEQy_vZZ-"
       },
